--- a/src/app/login-form/login-form.component.html
+++ b/src/app/login-form/login-form.component.html
@@ -1,1 +1,14 @@
 <p>login-form works!</p>
+<div class="form-group">
+    <label for="email" class="form-control">Email</label>
+    <input type="email" id="email" class="form-control">
+    <label for="password">Password</label>
+    <input type="password" id="password" class="form-control">
+    <div class="form-check">
+        <input type="checkbox" id="checkbox" class="form-check-input">
+        <label for="checkbox" class="form-check-label">Remember Me</label>                
+    </div>
+    <div class="container">
+        <button class="btn btn-outline-primary btn-block">Login</button>        
+    </div>
+</div>
