--- a/src/app/register-form/register-form.component.html
+++ b/src/app/register-form/register-form.component.html
@@ -1,1 +1,26 @@
 <p>register-form works!</p>
+<div class="form-group">
+    <label for="name">Full Name</label>
+    <input type="name" id = "name" class="form-control">
+    <label for="email">Email</label>
+    <input type="email" id = "email" class="form-control">
+    <label for="gender">Gender</label>
+    <select name="gender" id="gender" class="form-control">
+        <option value="0">Male</option>
+        <option value="1">Female</option>
+        <option value="2">Dont Prefered to tell</option>
+    </select>
+    <label for="contact"></label>
+    <input type="contact" class="form-control">
+    <label for="password">Create Password</label>
+    <input type="password" class="form-control" id="password">
+    <label for="confirm-password">Confirm Password</label>
+    <input type="password" class="form-control" id="confirm-password">
+    <div class="form-check">
+        <input type="checkbox" id="checkbox" class="form-check-input">
+        <label for="checkbox" class="form-check-label">Remember Me</label>                
+    </div>
+    <div class="container">
+        <button class="btn btn-outline-primary btn-block">Submit</button>        
+    </div>
+</div>
