routerLink tag added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,13 +7,13 @@
   <nav class="nav navbar nav-primary">
       <ul class="list">
           <li>
-              <a href="/login" class="btn-outline-primary">Login</a>
+              <a href="/login" routerLink="/login" class="btn-outline-primary">Login</a>
           </li>
           <li>
-              <a href="/register" class="btn-outline-primary">Register</a>
+              <a href="/register" routerLink="/register" class="btn-outline-primary">Register</a>
           </li>
           <li>
-              <a href="/dashboard" class="btn-outline-primary">Dashboard</a>
+              <a href="/dashboard" routerLink="/dashboard" class="btn-outline-primary">Dashboard</a>
           </li>
       </ul>
   </nav>    
