--- a/src/app/login-form/login-form.component.html
+++ b/src/app/login-form/login-form.component.html
@@ -1,14 +1,19 @@
 <p>login-form works!</p>
-<div class="form-group">
-    <label for="email" class="form-control">Email</label>
-    <input type="email" id="email" class="form-control">
-    <label for="password">Password</label>
-    <input type="password" id="password" class="form-control">
-    <div class="form-check">
-        <input type="checkbox" id="checkbox" class="form-check-input">
-        <label for="checkbox" class="form-check-label">Remember Me</label>                
-    </div>
-    <div class="container">
-        <button class="btn btn-outline-primary btn-block">Login</button>        
-    </div>
+<div class="container">
+    <form #loginform = "ngForm" (ngSubmit) = "saveData(loginform)">
+        <div class="form-group">
+            <label for="email" class="form-control">Email</label>
+            <input type="email" id="email" class="form-control" name="email" ngModel>
+            <label for="password">Password</label>
+            <input type="password" id="password" class="form-control" name="password" ngModel>
+            <div class="form-check">
+                <input type="checkbox" id="checkbox" class="form-check-input" name="remembertoken" ngModel>
+                <label for="checkbox" class="form-check-label">Remember Me</label>                
+            </div>
+            <div class="container">
+                <button class="btn btn-outline-primary btn-block">Login</button>        
+            </div>
+        </div>          
+    </form>
+  
 </div>
