--- a/src/app/login-form/login-form.component.html
+++ b/src/app/login-form/login-form.component.html
@@ -1,8 +1,7 @@
-<p>login-form works!</p>
 <div class="container">
     <form #loginform = "ngForm" (ngSubmit) = "saveData(loginform)">
         <div class="form-group">
-            <label for="email" class="form-control">Email</label>
+            <label for="email">Email</label>
             <input type="email" id="email" class="form-control" name="email" ngModel>
             <label for="password">Password</label>
             <input type="password" id="password" class="form-control" name="password" ngModel>
@@ -12,8 +11,7 @@
             </div>
             <div class="container">
                 <button class="btn btn-outline-primary btn-block">Login</button>        
-            </div>
-        </div>          
+            </div>                 
+        </div>
     </form>
-  
 </div>
