everything is working fine

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,22 @@
 <header>
   <div class="container">
-      <nav class="container btn-primary btn-block">
+      <nav class="btn-primary btn-block">
       <h1>Welcome to Simple user-auth-flow Angular App</h1>
       </nav>
-  </div>
-  <nav class="nav navbar nav-primary">
-      <ul class="list">
-          <li>
-              <a href="/login" routerLink="/login" class="btn-outline-primary">Login</a>
-          </li>
-          <li>
-              <a href="/register" routerLink="/register" class="btn-outline-primary">Register</a>
-          </li>
-          <li>
-              <a href="/dashboard" routerLink="/dashboard" class="btn-outline-primary">Dashboard</a>
-          </li>
-      </ul>
-  </nav>    
+      <nav class="nav navbar nav-primary">
+          <ul class="list">
+              <li>
+                  <a href="/login" routerLink="/login" class="btn-outline-primary">Login</a>
+              </li>
+              <li>
+                  <a href="/register" routerLink="/register" class="btn-outline-primary">Register</a>
+              </li>
+              <li>
+                  <a href="/dashboard" routerLink="/dashboard" class="btn-outline-primary">Dashboard</a>
+              </li>
+          </ul>
+      </nav>   
+  </div> 
 </header>
 <div class="container">
   <router-outlet></router-outlet>
