--- a/src/app/register-form/register-form.component.html
+++ b/src/app/register-form/register-form.component.html
@@ -7,9 +7,9 @@
             <input type="email" id = "email" class="form-control" name="email" ngModel>
             <label for="gender">Gender</label>
             <select name="gender" id="gender" class="form-control" name="gender" ngModel>
-                <option value="0">Male</option>
-                <option value="1">Female</option>
-                <option value="2">Dont Prefered to tell</option>
+                <option value="male">Male</option>
+                <option value="female">Female</option>
+                <option value="other">Dont Prefered to tell</option>
             </select>
             <label for="contact">Contact</label>
             <input type="contact" class="form-control" name="contact" ngModel>
