--- a/src/app/login-form/login-form.component.html
+++ b/src/app/login-form/login-form.component.html
@@ -2,9 +2,17 @@
     <form #loginform = "ngForm" (ngSubmit) = "saveData(loginform)">
         <div class="form-group">
             <label for="email">Email</label>
-            <input type="email" id="email" class="form-control" name="email" ngModel>
+            <input type="email" id="email" class="form-control" name="email" ngModel required>
+            <div class="alert alert-danger" *ngIf = "loginform.controls['email'].value == '' && loginform.controls['email'].touched">
+                Email is required
+            </div>
+
             <label for="password">Password</label>
-            <input type="password" id="password" class="form-control" name="password" ngModel>
+            <input type="password" id="password" class="form-control" name="password" ngModel required>
+            <div class="alert alert-danger" *ngIf = "loginform.controls['password'].value == '' && loginform.controls['password'].touched">
+                Password is required
+            </div>
+
             <div class="form-check">
                 <input type="checkbox" id="checkbox" class="form-check-input" name="remembertoken" ngModel>
                 <label for="checkbox" class="form-check-label">Remember Me</label>                
