template driven forms modified to reactive forms

--- a/src/app/register-form/register-form.component.html
+++ b/src/app/register-form/register-form.component.html
@@ -1,59 +1,60 @@
 <div class="container">
-    <form #registerform = "ngForm" (ngSubmit) = "register(registerform)" novalidate>
+    <form [formGroup] = "myRegistrationForm" (ngSubmit) = "onSubmit()" novalidate>
         <div class="form-group">
             <label for="name">Full Name</label>
-            <input type="name" id = "name" class="form-control" name="name" ngModel required>
-            <div class="alert alert-danger" *ngIf = "registerform.controls['name'].value == '' && registerform.controls['name'].touched">
+            <input type="name" id = "name" class="form-control" formControlName="name"  required>
+            <div class="alert alert-danger" *ngIf = "myRegistrationForm.controls['name'].value == '' && myRegistrationForm.controls['name'].touched">
                 Name is Required
             </div>
 
             <label for="email">Email</label>
-            <input type="email" id = "email" class="form-control" name="email" ngModel required email>
-            <div class="alert alert-danger" *ngIf = "registerform.controls['email'].value == '' && registerform.controls['email'].touched">
+            <input type="email" id = "email" class="form-control" formControlName="email"  required email>
+            <div class="alert alert-danger" *ngIf = "myRegistrationForm.controls['email'].value == '' && myRegistrationForm.controls['email'].touched">
                 Email is Required
             </div>
-            <div class="alert alert-danger" *ngIf = "registerform.controls['email'].invalid && registerform.controls['email'].value != ''">
+            <div class="alert alert-danger" *ngIf = "myRegistrationForm.controls['email'].invalid && myRegistrationForm.controls['email'].value != ''">
                 Email is not valid
             </div>
 
             <label for="gender">Gender</label>
-            <select name="gender" id="gender" class="form-control" name="gender" ngModel required>
+            <select name="gender" id="gender" class="form-control" formControlName="gender"  required>
                 <option value="male">Male</option>
                 <option value="female">Female</option>
                 <option value="other">Dont Prefered to tell</option>
             </select>
-            <div class="alert alert-danger" *ngIf = "registerform.controls['gender'].invalid && registerform.controls['gender'].touched">
+            <div class="alert alert-danger" *ngIf = "myRegistrationForm.controls['gender'].invalid && myRegistrationForm.controls['gender'].touched">
                 Select gender
             </div>
 
             <label for="contact">Contact</label>
-            <input type="contact" class="form-control" name="contact" ngModel required minlength="10" maxlength="10" pattern="^[0-9]*$">
-            <div class="alert alert-danger" *ngIf = "registerform.controls['contact'].value == '' && registerform.controls['contact'].touched">
+            <input type="contact" class="form-control" formControlName="contact"  required minlength="10" maxlength="10" pattern="^[0-9]*$">
+            <div class="alert alert-danger" *ngIf = "myRegistrationForm.controls['contact'].value == '' && myRegistrationForm.controls['contact'].touched">
                 Contact is Required
             </div>
-            <div class="alert alert-danger" *ngIf = "registerform.controls['contact'].value != '' && registerform.controls['contact'].invalid">
+            <div class="alert alert-danger" *ngIf = "myRegistrationForm.controls['contact'].value != '' && myRegistrationForm.controls['contact'].invalid">
                 Contact is Invalid
             </div>
 
             <label for="password">Create Password</label>
-            <input type="password" class="form-control" id="password" name="password" ngModel required pattern="^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9])(?=.*?[#?!@$%^&*-]).{8,}$">
-            <div class="alert alert-danger" *ngIf = "registerform.controls['password'].value == '' && registerform.controls['password'].touched">
+            <input type="password" class="form-control" id="password" formControlName="password"  required pattern="^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9])(?=.*?[#?!@$%^&*-]).{8,}$">
+            <div class="alert alert-danger" *ngIf = "myRegistrationForm.controls['password'].value == '' && myRegistrationForm.controls['password'].touched">
                 Password is Required
             </div>
-            <div class="alert alert-danger" *ngIf = "registerform.controls['password'].invalid && registerform.controls['password'].value != ''">
-                Password is Invalid
+            <div class="alert alert-danger" *ngIf = "myRegistrationForm.controls['password'].invalid && myRegistrationForm.controls['password'].value != ''">
+                Password should be min length 8
+                should contain one upper case one lower case and one special character
             </div>
 
             <label for="confirm-password">Confirm Password</label>
-            <input type="password" class="form-control" id="confirm-password" name="confirm_password" ngModel required>
-            <div class="alert alert-danger" *ngIf = "registerform.controls['confirm_password'].touched && !(registerform.controls['confirm_password'].value == registerform.controls['password'].value)">
+            <input type="password" class="form-control" id="confirm-password" formControlName="confirm_password" required>
+            <div class="alert alert-danger" *ngIf = "myRegistrationForm.controls['confirm_password'].touched && !(myRegistrationForm.controls['confirm_password'].value == myRegistrationForm.controls['password'].value)">
                 Password and Confirm Password is'nt matching
             </div>
 
-            <div class="form-check">
-                <input type="checkbox" id="checkbox" class="form-check-input" name="remember_token" ngModel>
+            <!-- <div class="form-check">
+                <input type="checkbox" id="checkbox" class="form-check-input" formControlName="remember_token">
                 <label for="checkbox" class="form-check-label">Remember Me</label>                
-            </div>
+            </div> -->
 
             <div class="container">
                 <button class="btn btn-outline-primary btn-block">Submit</button>        
