--- a/src/app/login-form/login-form.component.html
+++ b/src/app/login-form/login-form.component.html
@@ -1,20 +1,19 @@
 <div class="container">
-    <form #loginform = "ngForm" (ngSubmit) = "saveData(loginform)">
+    <form [formGroup] = "myLoginForm" (ngSubmit) = "onSubmit()">
         <div class="form-group">
             <label for="email">Email</label>
-            <input type="email" id="email" class="form-control" name="email" ngModel required>
-            <div class="alert alert-danger" *ngIf = "loginform.controls['email'].value == '' && loginform.controls['email'].touched">
+            <input type="email" id="email" class="form-control" formControlName = "email" required>
+            <div class="alert alert-danger" *ngIf = "myLoginForm.controls['email'].value == '' && myLoginForm.controls['email'].touched">
                 Email is required
             </div>
-
             <label for="password">Password</label>
-            <input type="password" id="password" class="form-control" name="password" ngModel required>
-            <div class="alert alert-danger" *ngIf = "loginform.controls['password'].value == '' && loginform.controls['password'].touched">
+            <input type="password" id="password" class="form-control" formControlName="password" required>
+            <div class="alert alert-danger" *ngIf = "myLoginForm.controls['password'].value == '' && myLoginForm.controls['password'].touched">
                 Password is required
             </div>
 
             <div class="form-check">
-                <input type="checkbox" id="checkbox" class="form-check-input" name="remembertoken" ngModel>
+                <input type="checkbox" id="checkbox" class="form-check-input" formControlName = "remembertoken">
                 <label for="checkbox" class="form-check-label">Remember Me</label>                
             </div>
             <div class="container">
