thinks working fine

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,10 @@
       </nav>
       <nav class="nav navbar nav-primary">
           <ul class="list">
+
+              <li>
+                  <a href="/home" routerLink="/home" class="btn-outline-primary">Home</a>
+              </li>
               <li>
                   <a href="/login" routerLink="/login" class="btn-outline-primary">Login</a>
               </li>
@@ -13,6 +17,9 @@
               </li>
               <li>
                   <a href="/dashboard" routerLink="/dashboard" class="btn-outline-primary">Dashboard</a>
+              </li>
+              <li>
+                  <a href="/createpost" routerLink="/createpost" class="btn-outline-primary">Create Post</a>
               </li>
           </ul>
       </nav>   
