--- a/src/app/create-post/create-post.component.html
+++ b/src/app/create-post/create-post.component.html
@@ -1,5 +1,5 @@
-<p>create-post works!</p>
-<div class="container">
+
+<div class="container" *ngIf = "login">
     <form [formGroup] = "myPost" (ngSubmit) = "onSubmit()">
         <label for="description">Description</label>
         <input type="text" id = "description" class="form-control" placeholder="Give a short description" formControlName = "description">
@@ -9,3 +9,4 @@
         <button class="btn btn-outline-primary">Create Post</button>            
     </form>
 </div>
+<strong *ngIf="!login">You are not logged in. Kindly login to Create a posts</strong>
