--- a/src/app/login-form/login-form.component.html
+++ b/src/app/login-form/login-form.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" *ngIf = "!login">
     <form [formGroup] = "myLoginForm" (ngSubmit) = "onSubmit()">
         <div class="form-group">
             <label for="email">Email</label>
@@ -22,3 +22,4 @@
         </div>
     </form>
 </div>
+<strong *ngIf = "login">You are already logged in</strong>
